atlantis/atlantis-static-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-static
  namespace: atlantis
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: atlantis
                port:
                  number: 80
