atlantis/atlantis-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-ui
  namespace: atlantis
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /atlantis(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: atlantis
                port:
                  number: 80
